WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200295
[WPE] Missing UIScriptController implementation
https://bugs.webkit.org/show_bug.cgi?id=200295
Summary
[WPE] Missing UIScriptController implementation
Zan Dobersek
Reported
2019-07-31 00:03:26 PDT
Due to that, every test invoking methods there is crashing.
Attachments
Patch
(12.50 KB, patch)
2019-12-17 04:49 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-12-17 04:49:56 PST
Created
attachment 385878
[details]
Patch
WebKit Commit Bot
Comment 2
2019-12-19 01:34:38 PST
Comment on
attachment 385878
[details]
Patch Clearing flags on attachment: 385878 Committed
r253743
: <
https://trac.webkit.org/changeset/253743
>
WebKit Commit Bot
Comment 3
2019-12-19 01:34:39 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-12-19 01:35:15 PST
<
rdar://problem/58073156
>
Diego Pino
Comment 5
2020-03-11 04:54:07 PDT
There are still many entries in wpe/TestExpectations that point to this bug. However, this bug is now RESOLVED FIXED. The entries are:
webkit.org/b/200295
fast/events/autoscroll-when-input-is-offscreen.html [ Crash ]
webkit.org/b/200295
fast/events/autoscroll-with-software-keyboard.html [ Crash ]
webkit.org/b/200295
fast/events/before-input-prevent-insert-replacement.html [ Crash ]
webkit.org/b/200295
fast/events/input-event-insert-replacement.html [ Crash ]
webkit.org/b/200295
fast/viewport/ios/ [ Crash ]
webkit.org/b/200295
fast/visual-viewport/client-coordinates-relative-to-layout-viewport.html [ Crash ]
webkit.org/b/200295
fast/visual-viewport/client-rects-relative-to-layout-viewport.html [ Crash ] What to do with these entries? Move them to a new bug? In addition, since this bug landed there's one test from fast/viewport/ios/ which is no longer crashing, but failing: fast/viewport/ios/shrink-to-fit-large-content-width.html [ Failure ]
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug