[WPE] Missing UIScriptController implementation https://bugs.webkit.org/show_bug.cgi?id=200295

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2019-12-19
Reviewed by Žan Doberšek.

Tools:

Add initial implementation of UIScriptController for WPE.

* TestRunnerShared/UIScriptContext/UIScriptController.cpp:
* WebKitTestRunner/PlatformWPE.cmake:
* WebKitTestRunner/wpe/PlatformWebViewWPE.cpp:
(WTR::PlatformWebView::addToWindow):
(WTR::PlatformWebView::removeFromWindow):
* WebKitTestRunner/wpe/UIScriptControllerWPE.cpp: Added.
(WTR::UIScriptController::create):
(WTR::UIScriptControllerWPE::doAsyncTask):
(WTR::UIScriptControllerWPE::setContinuousSpellCheckingEnabled):
(WTR::UIScriptControllerWPE::copyText):
(WTR::UIScriptControllerWPE::dismissMenu):
(WTR::UIScriptControllerWPE::isShowingMenu const):
(WTR::UIScriptControllerWPE::activateAtPoint):
(WTR::UIScriptControllerWPE::simulateAccessibilitySettingsChangeNotification):
(WTR::UIScriptControllerWPE::removeViewFromWindow):
(WTR::UIScriptControllerWPE::addViewToWindow):
* WebKitTestRunner/wpe/UIScriptControllerWPE.h: Added.
* wpe/backends/ViewBackend.h:

LayoutTests:

Remove expectation of a test that is now passing.

* platform/wpe/TestExpectations:

Canonical link: https://commits.webkit.org/218633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253743 268f45cc-cd09-0410-ab3c-d52691b4dbfc