Tools/WebKitTestRunner/wpe/PlatformWebViewWPE.cpp
@@ -84,10 +84,12 @@ void PlatformWebView::removeChromeInputField()
 
 void PlatformWebView::addToWindow()
 {
+    m_window->addActivityState(wpe_view_activity_state_in_window);
 }
 
 void PlatformWebView::removeFromWindow()
 {
+    m_window->removeActivityState(wpe_view_activity_state_in_window);
 }
 
 void PlatformWebView::setWindowIsKey(bool windowIsKey)
