Tools/WebKitTestRunner/PlatformWPE.cmake
@@ -10,6 +10,7 @@ list(APPEND WebKitTestRunner_SOURCES
     ${WEBKIT_TESTRUNNER_DIR}/wpe/EventSenderProxyWPE.cpp
     ${WEBKIT_TESTRUNNER_DIR}/wpe/PlatformWebViewWPE.cpp
     ${WEBKIT_TESTRUNNER_DIR}/wpe/TestControllerWPE.cpp
+    ${WEBKIT_TESTRUNNER_DIR}/wpe/UIScriptControllerWPE.cpp
     ${WEBKIT_TESTRUNNER_DIR}/wpe/main.cpp
 )
 
